# ocuda-fec-plugin

./: .clang-format  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
include/ocuda-fec/cuda_helpers/: base_graph_description.h  cuda_stream.h  device_vector.h  host_to_device_promise.h  ldpc_decoder.h  ldpc_decoder_cuda_helpers.h
include/ocuda-fec/instrumentation/traces/: l1_cuda_traces.h
include/ocuda-fec/phy/upper/channel_coding/: ldpc_decoder_cuda.h  ldpc_decoder_cuda_backend.h
lib/: CMakeLists.txt
lib/cuda_helpers/: CMakeLists.txt  cuda_stream.cu  device_ldpc_decoder.h  device_ldpc_rate_dematcher.h  device_math_helpers.h  ldpc_decoder.cu  ldpc_decoder_cuda_helpers.cu  ldpc_decoder_impl.cu  ldpc_decoder_impl.h  sch_decoder.cu
lib/instrumentation/: CMakeLists.txt
lib/instrumentation/traces/: CMakeLists.txt  l1_cuda_traces.cpp
lib/phy/: CMakeLists.txt
lib/phy/upper/: CMakeLists.txt
lib/phy/upper/channel_coding/: CMakeLists.txt  ldpc_decoder_cuda.cpp  ldpc_decoder_cuda_asynchronous_backend.cpp  ldpc_decoder_cuda_asynchronous_backend.h  ldpc_decoder_cuda_backend.cpp  ldpc_decoder_cuda_impl.cpp  ldpc_decoder_cuda_impl.h
lib/phy/upper/channel_processors/: CMakeLists.txt
lib/phy/upper/channel_processors/pusch/: CMakeLists.txt  factories.cpp  pusch_codeblock_cuda_decoder.cpp  pusch_codeblock_cuda_decoder.h  pusch_decoder_buffer_dummy.h  pusch_decoder_cuda_impl.cpp  pusch_decoder_cuda_impl.h
tests/: CMakeLists.txt
tests/unittests/: CMakeLists.txt
tests/unittests/phy/: CMakeLists.txt
tests/unittests/phy/upper/: CMakeLists.txt
tests/unittests/phy/upper/channel_coding/: CMakeLists.txt
tests/unittests/phy/upper/channel_coding/ldpc/: CMakeLists.txt  ldpc_chain_cuda_test.cpp
